cambio en github

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <a href="https://www.linkedin.com/in/jorge-nanni/" target="_blank">
         <img class="imgSocialMedia" src="imagenes/linkedin.svg" alt="logo de Linkedin">
       </a>
-      <a href="https://github.com/JorgeNanni/Juego-Ahorcado" target="_blank">
+      <a href="https://github.com/JorgeNanni/ahorcado" target="_blank">
         <img class="imgSocialMedia" src="imagenes/github.svg" alt="logo de GitHub">
       </a>
     </div>
